framec_tests/language_specific/java/v3_outline/negative/pending/missing_brace.frm
@target java

system S {
    actions:
        doIt() 
}
